# openindex

./: .gitignore  README.md  pyproject.toml
openindex/: __init__.py  agents.py  config.py  index.py  models.py  parser.py
openindex/pipeline/: expander.py  generator.py  summarizer.py  tree_builder.py  verifier.py
openindex/prompts/: generator.py
openindex/utils/: logger.py
openindex/wiki/: __init__.py  compiler.py  models.py  prompts.py  query.py  renderer.py
tools/: index.py  query.py
