[project]
name = "openindex"
version = "0.1.2"
description = "Compile PDFs into a queryable wiki."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.6.9",
    "litellm>=1.86.2",
    "liteparse>=2.0.3",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "structlog>=25.5.0",
    "tqdm>=4.67.3",
]

[tool.setuptools.packages.find]
include = ["openindex*"]
